refactor: reorganize package structure and update CellUtils usage in readers